# cdi.py

./: .gitignore  README.md  setup.cfg
src/cdipy/: __init__.py  cdi.py  config.py
