[metadata]
name = cdipy
version = 0.0.1
author = Shengchen Zhang
author_email = shengchenzhang1207@gmail.com
description = Python API to control the smart space equipments at CDI.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tongji-cdi/cdi.py
project_urls =
    Bug Tracker = https://github.com/tongji-cdi/cdi.py/issues
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src